libclearpress-perl (476.4.2) stable; urgency=low

  * Permit configuration of default language in
    decorator::lang. Defaults to 'en'

libclearpress-perl (476.4.1) stable; urgency=low

  * Disable view redirect header response overflow handling by default.
    Re-enable by setting $ClearPress::view::TRAP_REDIR_OVERFLOW = 1

libclearpress-perl (476.3.1) stable; urgency=low

  * Support additional options for dsn connect (mysql only), primarily
    for RDS/IAM support.
    config.ini can now provide:
    dsn_opts=mysql_ssl=1;mysql_ssl_ca_file=/path/to/certificate.pem

libclearpress-perl (476.2.1) stable; urgency=low

  * ENTITY_HREF template value understands X-Forwarded-Proto header.

libclearpress-perl (476.1.1) stable; urgency=low

  * Do not overwrite the status code if it's already been set during
    model + view instantiation

libclearpress-perl (476.1.0) stable; urgency=low

  * Correction to per-request "singleton" util object management to
    support execution under Apache mpm_worker and mpm_event.
  * modifications to tests to support latest perl lib paths.

libclearpress-perl (475.5.0) stable; urgency=low

  * experimental OPTIONS support

libclearpress-perl (475.3.4) stable; urgency=low

  * applied tests for JSON-based POSTDATA (curl -d instead of curl -F)

libclearpress-perl (475.3.3) stable; urgency=low

  * uncovered a buffer overflow problem when combined with Apache +
    mod-perl2, possibly related to PerlOptions +ParseHeaders whereby
    if the response header block is too large (approx > 1KB) it
    becomes mangled as it's flushed to the client. view->redirect now
    returns content and sets decorator->meta_refresh if the header
    containing Location is deemed to be too large.

libclearpress-perl (475.2.2) stable; urgency=low

  * minor order change when emitting error responses
  * exclude empty header emission

libclearpress-perl (475.2.1) stable; urgency=low
